Fix compound label having extra margin on smallest screen size

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -728,6 +728,7 @@ fieldset.form__group--compound {
         float: left; // as we can't use inline-block
         font-size: inherit;
         line-height: inherit;
+        margin: 0;
     }
 
     > .controls {
